# faros-config

./: README.md  setup.cfg  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: invalid-bad_hostname.yml  invalid-no_dhcp.yml
src/faros_config/: __init__.py  bastion.py  cluster.py  common.py  config.py  network.py  proxy.py
src/faros_config/inventory/: __init__.py  cli.py  inventory.py
src/faros_config/ui/: form.py
tests/: __init__.py  conftest.py  test_config_examples.py  test_inventory.py  test_ui.py
