[metadata]
name = faros-config
description = Project Faros configuration library.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_file = LICENSE
url = https://faros.dev
author = James Harmison
author_email = jharmison@redhat.com

[options]
python_requires = >= 3.6
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    PyYAML==5.3.1
    pydantic==1.9.0
setup_requires =
    setuptools_scm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    faros-inventory = faros_config.inventory.cli:main
